WikimediaUI theme: Fix regression on Safari bug
Safari until latest 11.1 doesn't accept `background-size` transitions
on SVG background images.
Sorry, World for letting go of our small, but cute transition for a crappy
browser.

Bug: T194667

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -388,7 +388,6 @@
 			cursor: pointer;
 			.oo-ui-transition(
 				background-color @transition-ease-quick,
-				background-size @transition-ease-quick,
 				border-color @transition-ease-quick,
 				box-shadow @transition-ease-quick
 			);
